@@ -1,3 +1,4 @@
+*~
 autom4te.cache
 aclocal.m4
 configure
@@ -9,4 +10,7 @@ stamp-h1
 Makefile
 .deps
 *.o
+site.exp
+*.log
+*.sum
 dbsh
