@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.61)
 AC_INIT(dbsh, 0.4a, dangerous.ben@gmail.com)
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE([foreign dejagnu])
 AC_CONFIG_SRCDIR([main.c])
 AC_CONFIG_HEADER([config.h])
 
