@@ -1,0 +1,8 @@
+set test "TSV output"
+
+send "SELECT * FROM test\\T\n"
+
+expect {
+    "id      desc\r\n1       This is some text.\r\n2       \r\n3       This is some\r\ntext with\r\nnewlines in it.\r\n\r\n"
+    { pass "$test" }
+}
